[package]
name = "entr0py"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
crossterm = "0.27.0"
json = "0.12.4"
qr_code = "2.0.0"
reqwest = {version = "0.11.23", features = ['blocking', 'json']}
tui = "0.19.0"

[build-dependencies]
winres = "0.1"
